<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#b6cdd0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockLookupHome"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="resetText"
        android:text="@string/button_reset"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AutoCompleteTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_bg_rc"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toStartOf="@+id/button_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reset">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <TableRow>

                <TextView
                    android:id="@+id/trIMG"
                    android:layout_width="86px"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/table_head_IMG" />

                <TextView
                    android:id="@+id/trSKU"
                    android:layout_width="30dp"
                    android:layout_column="0"
                    android:layout_weight="2"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/table_head_SKU" />

                <TextView
                    android:id="@+id/trTitle"
                    android:layout_width="100dp"
                    android:layout_column="1"
                    android:layout_weight="2"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/table_head_Title"></TextView>

                <TextView
                    android:id="@+id/trQty"
                    android:layout_width="50px"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/table_head_Qty"></TextView>
            </TableRow>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/mainTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#b6cdd0"
                    android:stretchColumns="*"></TableLayout>

            </ScrollView>
        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>